# harfrust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  HARFBUZZ.md  README.md  justfile
.github/workflows/: ci.yml  dependabot.yml  main.yml
benches/: Cargo.toml  shaping.rs
benches/fonts/: Amiri-LICENSE-OFL.txt  NotoSansDevanagari-LICENSE-OFL.txt
benches/src/: lib.rs
examples/: shape.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_shape.rs  helpers.rs
harfrust/: Cargo.toml
harfrust-utils/: Cargo.toml  README.md
harfrust-utils/src/: main.rs
harfrust/benches/: shaping.rs
harfrust/examples/: shape.rs
harfrust/src/: lib.rs
harfrust/src/hb/: buffer.rs  charmap.rs  common.rs  face.rs  font_funcs.rs  glyph_metrics.rs  glyph_names.rs  kerning.rs  ot_layout.rs  ot_layout_gpos_table.rs  ot_layout_gsubgpos.rs  ot_shape.rs  ot_shape_fallback.rs  ot_shape_plan.rs  ot_shaper_use_table.rs  set_digest.rs  tables.rs  tag.rs  tag_table.rs  ucd_table.rs
harfrust/src/hb/aat/: layout_kerx_table.rs  layout_morx_table.rs  layout_trak_table.rs  mod.rs
harfrust/src/hb/ot/: contextual.rs  lookup.rs  mod.rs
harfrust/src/hb/ot/gpos/: cursive.rs  mark.rs  pair.rs  single.rs
harfrust/src/hb/ot/gsub/: alternate.rs  ligature.rs  multiple.rs  reverse_chain.rs  single.rs
harfrust/tests/: font_funcs.rs  scaling.rs
harfrust/tests/shaping/: aots.rs  custom.rs  in_house.rs  macos.rs  macos_lazy_tables.rs  main.rs  regressions.rs  text_rendering_tests.rs
hr-shape/: Cargo.toml  README.md
hr-shape/src/: lib.rs  main.rs
scripts/: README.md  bump-version.sh  gen-arabic-table.py  gen-indic-table.py  gen-shaping-tests.py  gen-tag-table.py  update-unicode-tables.mk
scripts/ms-use/: IndicPositionalCategory-Additional.txt  IndicShapingInvalidCluster.txt  IndicSyllabicCategory-Additional.txt
src/: lib.rs
src/hb/: aat_layout.rs  aat_layout_common.rs  aat_layout_kerx_table.rs  aat_layout_morx_table.rs  aat_layout_trak_table.rs  aat_map.rs  buffer.rs  cache.rs  charmap.rs  common.rs  face.rs  glyph_metrics.rs  glyph_names.rs  kerning.rs  mod.rs  ot_layout.rs  ot_layout_gpos_table.rs  ot_layout_gsub_table.rs  ot_layout_gsubgpos.rs  ot_map.rs  ot_shape.rs  ot_shape_fallback.rs  ot_shape_normalize.rs  ot_shape_plan.rs  ot_shaper.rs  ot_shaper_arabic.rs  ot_shaper_arabic_table.rs  ot_shaper_hangul.rs  ot_shaper_hebrew.rs  ot_shaper_indic.rs  ot_shaper_indic_machine.rl  ot_shaper_indic_machine.rs  ot_shaper_khmer.rs  ot_shaper_khmer_machine.rl  ot_shaper_khmer_machine.rs  ot_shaper_myanmar.rs  ot_shaper_myanmar_machine.rl  ot_shaper_myanmar_machine.rs  ot_shaper_syllabic.rs  ot_shaper_thai.rs  (+12 more)
src/hb/aat/: layout.rs  layout_common.rs  layout_kerx_table.rs  layout_morx_table.rs  layout_trak_table.rs  map.rs  mod.rs
src/hb/ot/: contextual.rs  lookup.rs  mod.rs
src/hb/ot/gpos/: cursive.rs  mark.rs  mod.rs  pair.rs  single.rs
src/hb/ot/gsub/: alternate.rs  ligature.rs  mod.rs  multiple.rs  reverse_chain.rs  single.rs
tests/custom/: colr.tests  fuzzer.tests  glyph-flags.tests  macos.tests
tests/fonts/rb_custom/: BungeeTint-Regular-OFL.txt  Rasa-OFL.txt
tests/shaping/: custom.rs  in_house.rs  macos.rs  main.rs
