[package]
name = "harfrust-utils"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
description = "Command-line utilities for HarfRust text shaping library."
repository = "https://github.com/harfbuzz/harfrust"
license = "MIT"
readme = "README.md"
keywords = ["text", "shaping", "opentype", "truetype"]
categories = ["text-processing"]

[dependencies]
harfrust = { path = "..", default-features = false, features = ["std"] }
pico-args = { version = "0.5", features = ["eq-separator"] }
libc = "0.2"

[[bin]]
name = "hr-shape"
path = "src/main.rs"
