[package]
name = "harfrust-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line utilities for HarfRust text shaping library."
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
harfrust = { path = "..", default-features = false, features = ["std"] }
pico-args = { version = "0.5", features = ["eq-separator"] }

[[bin]]
name = "hr-shape"
path = "src/main.rs"
