[package]
name = "harfrust-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line utilities for HarfRust text shaping library."
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
harfrust = { path = "../harfrust", default-features = false, features = ["std"] }

[[bin]]
name = "hr-shape"
path = "src/main.rs"

[lints]
workspace = true
