[package]
name = "harfrust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
exclude = ["benches/", "tests/"]

[dependencies]
read-fonts.workspace  = true
bitflags = "2.9"
bytemuck = { version = "1.22", features = ["extern_crate_alloc"] }
core_maths = "0.1" # only for no_std builds
smallvec = "1.14"

[features]
default = ["std"]
std = ["read-fonts/std"]

[dev-dependencies]
criterion = "0.8.0"
harfbuzz_rs = { git = "https://github.com/harfbuzz/harfbuzz_rs/", rev = "66dae27" }
hr-shape = { path = "../hr-shape" }

[lib]
bench = false

[[bench]]
name = "shaping"
harness = false

[lints]
workspace = true
